--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
             <a href="#contact"><button class="btn">Hire Me</button></a>
 
             <div class="share">
-                <a href="#" class="fab fa-facebook-f"></a>
-                <a href="#" class="fab fa-twitter"></a>
-                <a href="#" class="fab fa-instagram"></a>
-                <a href="#" class="fab fa-pinterest"></a>
-                <a href="#" class="fab fa-linkedin"></a>
+                <a href="https://www.facebook.com/webdesigner.barsha" class="fab fa-facebook-f"></a>
+                <a href="https://www.pinterest.com/lamiabarsha/" class="fab fa-pinterest"></a>
+                <a href="https://www.instagram.com/lamiabarsha/" class="fab fa-instagram"></a>
+                <a href="https://github.com/Developer-Barsha" class="fab fa-github"></a>
+                <a href="https://www.youtube.com/channel/UCl-x9O0gqcAJB6pXRfXsYlQ" class="fab fa-youtube"></a>
             </div>
 
         </section>
