body responsive done

--- a/index.html
+++ b/index.html
@@ -38,10 +38,12 @@
 
         <section class="home" id="home">
 
-            <h3>Hi there.....</h3>
-            <h3 class="name">my name is <span>Lamia Barsha</span></h3>
-            <h3 class="name">i am <span class="typing-text">Web Designer</span></h3>
-            <a href="#contact"><button class="btn">Hire Me</button></a>
+            <!-- <div class="intro"> -->
+                <h3>Hi there.....</h3>
+                <h3 class="name">my name is <span>Lamia Barsha</span></h3>
+                <h3 class="name">i am <span class="typing-text">Web Designer</span></h3>
+                <a href="#contact"><button class="btn">Hire Me</button></a>
+            <!-- </div> -->
 
             <div class="share">
                 <a href="https://www.facebook.com/webdesigner.barsha" class="fab fa-facebook-f"></a>
