kinda responsive done

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
 
         <section class="home" id="home">
 
-            <!-- <div class="intro"> -->
+            <div class="intro">
                 <h3>Hi there.....</h3>
                 <h3 class="name">my name is <span>Lamia Barsha</span></h3>
                 <h3 class="name">i am <span class="typing-text">Web Designer</span></h3>
                 <a href="#contact"><button class="btn">Hire Me</button></a>
-            <!-- </div> -->
+            </div>
 
             <div class="share">
                 <a href="https://www.facebook.com/webdesigner.barsha" class="fab fa-facebook-f"></a>
@@ -119,17 +119,7 @@
                 </div>
 
                 <div class="box">
-                    <i class="fab fa-wordpress"></i>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero, eveniet.</p>
-                </div>
-
-                <div class="box">
-                    <i class="fas fa-paint-brush"></i>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero, eveniet.</p>
-                </div>
-
-                <div class="box">
-                    <i class="fas fa-bullhorn"></i>
+                    <i class="fab fa-js"></i>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero, eveniet.</p>
                 </div>
             </div>
@@ -186,10 +176,9 @@
             <h1 class="heading">contact me</h1>
             <div class="row">
                 <form action="">
-                    <input type="text" class="box" placeholder="first Name">
-                    <input type="text" class="box" placeholder="last Name">
-                    <input type="email" class="box" placeholder="Your email">
-                    <input type="text" class="box" placeholder="Your subject">
+                    <input type="text" class="box" placeholder="Name">
+                    <input type="email" class="box" placeholder="Email">
+                    <input type="text" class="box" placeholder="Subject">
                     <textarea name="" id="" cols="30" rows="10" class="box message" placeholder="message"></textarea>
                     <input type="submit" value="message me" class="btn">
                 </form>
