--- a/index.html
+++ b/index.html
@@ -138,7 +138,6 @@
                     <div class="year">2017 - 2018</div>
                     <h3>front end development</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur adipisci dolore pariatur,
-                        blanditiis ex recusandae fuga praesentium facilis totam deleniti. Lorem ipsum dolor sit amet.
                     </p>
                 </div>
 
@@ -146,7 +145,6 @@
                     <div class="year">2018 - 2019</div>
                     <h3>front end development</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur adipisci dolore pariatur,
-                        blanditiis ex recusandae fuga praesentium facilis totam deleniti. Lorem ipsum dolor sit amet.
                     </p>
                 </div>
 
@@ -154,7 +152,6 @@
                     <div class="year">2019 - 2020</div>
                     <h3>front end development</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur adipisci dolore pariatur,
-                        blanditiis ex recusandae fuga praesentium facilis totam deleniti. Lorem ipsum dolor sit amet.
                     </p>
                 </div>
 
@@ -162,7 +159,6 @@
                     <div class="year">2020 - 2021</div>
                     <h3>front end development</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur adipisci dolore pariatur,
-                        blanditiis ex recusandae fuga praesentium facilis totam deleniti. Lorem ipsum dolor sit amet.
                     </p>
                 </div>
 
@@ -208,10 +204,11 @@
     <div class="theme-toggler">
         <span style="background: linear-gradient(deeppink, purple);"></span>
         <span style="background: linear-gradient(darkblue, skyblue);"></span>
-        <span style="background: linear-gradient(blueviolet, deeppink);"></span>
-        <span style="background: linear-gradient(coral, blueviolet);"></span>
-        <span style="background: linear-gradient(#999, #111);"></span>
-        <span style="background: linear-gradient(pink, #111);"></span>
+        <span style="background: linear-gradient(crimson, deeppink);"></span>
+        <span style="background: linear-gradient( #00C9C6 , #57FF73);"></span>
+        <span style="background: linear-gradient(  #6FE6FE , #EA6AFE);"></span>
+        <span style="background: linear-gradient(  #667eea , #764ba2);"></span>
+        <span style="background: linear-gradient(pink, #ff007f);"></span>
     </div>
 
     <!---typed js--->
